@@ -18,7 +18,6 @@
 package org.jackhuang.hmcl.terracotta;
 
 import com.google.gson.JsonObject;
-import com.google.gson.reflect.TypeToken;
 import javafx.application.Platform;
 import javafx.beans.property.ReadOnlyDoubleWrapper;
 import javafx.beans.property.ReadOnlyObjectProperty;
@@ -29,27 +28,32 @@ import org.jackhuang.hmcl.task.DownloadException;
 import org.jackhuang.hmcl.task.GetTask;
 import org.jackhuang.hmcl.task.Schedulers;
 import org.jackhuang.hmcl.task.Task;
-import org.jackhuang.hmcl.terracotta.provider.ITerracottaProvider;
+import org.jackhuang.hmcl.terracotta.provider.AbstractTerracottaProvider;
 import org.jackhuang.hmcl.ui.FXUtils;
+import org.jackhuang.hmcl.util.FXThread;
 import org.jackhuang.hmcl.util.InvocationDispatcher;
 import org.jackhuang.hmcl.util.Lang;
+import org.jackhuang.hmcl.util.Pair;
 import org.jackhuang.hmcl.util.gson.JsonUtils;
 import org.jackhuang.hmcl.util.io.FileUtils;
+import org.jackhuang.hmcl.util.io.HttpRequest;
 import org.jackhuang.hmcl.util.io.NetworkUtils;
 import org.jackhuang.hmcl.util.platform.ManagedProcess;
 import org.jackhuang.hmcl.util.platform.SystemUtils;
-import org.jackhuang.hmcl.util.tree.TarFileTree;
-import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.CancellationException;
 import java.util.concurrent.ThreadLocalRandom;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.concurrent.locks.LockSupport;
 
+import static org.jackhuang.hmcl.util.Pair.pair;
 import static org.jackhuang.hmcl.util.i18n.I18n.i18n;
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
@@ -70,9 +74,10 @@ public final class TerracottaManager {
                 switch (TerracottaMetadata.PROVIDER.status()) {
                     case NOT_EXIST -> setState(new TerracottaState.Uninitialized(false));
                     case LEGACY_VERSION -> setState(new TerracottaState.Uninitialized(true));
-                    case READY -> launch(setState(new TerracottaState.Launching()));
+                    case READY -> launch(setState(new TerracottaState.Launching()), false);
                 }
             } catch (Exception e) {
+                LOG.warning("Cannot initialize Terracotta.", e);
                 compareAndSet(TerracottaState.Bootstrap.INSTANCE, new TerracottaState.Fatal(TerracottaState.Fatal.Type.UNKNOWN));
             }
         });
@@ -82,114 +87,145 @@ public final class TerracottaManager {
         return STATE.getReadOnlyProperty();
     }
 
-    static {
-        Lang.thread(() -> {
-            while (true) {
-                TerracottaState state = STATE_V.get();
-                if (!(state instanceof TerracottaState.PortSpecific portSpecific)) {
-                    LockSupport.parkNanos(500_000);
+    private static final Thread DAEMON = Lang.thread(TerracottaManager::runBackground, "Terracotta Background Daemon", true);
+
+    @FXThread // Written in FXThread, read-only on background daemon
+    private static volatile boolean daemonRunning = false;
+
+    private static void runBackground() {
+        final long ACTIVE = TimeUnit.MILLISECONDS.toNanos(500);
+        final long BACKGROUND = TimeUnit.SECONDS.toMillis(15);
+
+        while (true) {
+            if (daemonRunning) {
+                LockSupport.parkNanos(ACTIVE);
+            } else {
+                long deadline = System.currentTimeMillis() + BACKGROUND;
+                do {
+                    LockSupport.parkUntil(deadline);
+                } while (!daemonRunning && System.currentTimeMillis() < deadline - 100);
+            }
+
+            if (!(STATE_V.get() instanceof TerracottaState.PortSpecific state)) {
+                continue;
+            }
+            int port = state.port;
+            int index = state instanceof TerracottaState.Ready ready ? ready.index : Integer.MIN_VALUE;
+
+            TerracottaState next;
+            try {
+                TerracottaState.Ready object = HttpRequest.GET(String.format("http://127.0.0.1:%d/state", port))
+                        .retry(5)
+                        .getJson(TerracottaState.Ready.class);
+                if (object.index <= index) {
                     continue;
                 }
-
-                int port = portSpecific.port;
-                int index = state instanceof TerracottaState.Ready ready ? ready.index : Integer.MIN_VALUE;
-
-                TerracottaState next;
-                try {
-                    next = new GetTask(URI.create(String.format("http://127.0.0.1:%d/state", port)))
-                            .setSignificance(Task.TaskSignificance.MINOR)
-                            .thenApplyAsync(jsonString -> {
-                                TerracottaState.Ready object = JsonUtils.fromNonNullJson(jsonString, TypeToken.get(TerracottaState.Ready.class));
-                                if (object.index <= index) {
-                                    return null;
-                                }
-
-                                object.port = port;
-                                return object;
-                            })
-                            .setSignificance(Task.TaskSignificance.MINOR)
-                            .run();
-                } catch (Exception e) {
-                    LOG.warning("Cannot fetch state from Terracotta.", e);
-                    next = new TerracottaState.Fatal(TerracottaState.Fatal.Type.TERRACOTTA);
-                }
-
-                if (next != null) {
-                    compareAndSet(state, next);
-                }
-
-                LockSupport.parkNanos(500_000);
+                object.port = port;
+                next = object;
+            } catch (Exception e) {
+                LOG.warning("Cannot fetch state from Terracotta.", e);
+                next = new TerracottaState.Fatal(TerracottaState.Fatal.Type.TERRACOTTA);
             }
-        }, "Terracotta Background Daemon", true);
+
+            compareAndSet(state, next);
+        }
     }
 
-    public static boolean validate(Path file) {
-        return FileUtils.getName(file).equalsIgnoreCase(TerracottaMetadata.PACKAGE_NAME);
-    }
-
-    public static TerracottaState.Preparing install(@Nullable Path file) {
+    @FXThread
+    public static void switchDaemon(boolean active) {
         FXUtils.checkFxUserThread();
 
-        TerracottaState state = STATE_V.get();
-        if (!(state instanceof TerracottaState.Uninitialized ||
-                state instanceof TerracottaState.Preparing preparing && preparing.hasInstallFence() ||
-                state instanceof TerracottaState.Fatal && ((TerracottaState.Fatal) state).isRecoverable())
-        ) {
-            return null;
-        }
-
-        if (file != null && !FileUtils.getName(file).equalsIgnoreCase(TerracottaMetadata.PACKAGE_NAME)) {
-            return null;
-        }
-
-        TerracottaState.Preparing preparing = new TerracottaState.Preparing(new ReadOnlyDoubleWrapper(-1));
-
-        Task.supplyAsync(Schedulers.io(), () -> {
-            return file != null ? TarFileTree.open(file) : null;
-        }).thenComposeAsync(Schedulers.javafx(), tree -> {
-            return getProvider().install(preparing, tree).whenComplete(exception -> {
-                if (tree != null) {
-                    tree.close();
-                }
-                if (exception != null) {
-                    throw exception;
-                }
-            });
-        }).whenComplete(exception -> {
-            if (exception == null) {
-                try {
-                    TerracottaMetadata.removeLegacyVersionFiles();
-                } catch (IOException e) {
-                    LOG.warning("Unable to remove legacy terracotta files.", e);
-                }
-
-                TerracottaState.Launching launching = new TerracottaState.Launching();
-                if (compareAndSet(preparing, launching)) {
-                    launch(launching);
-                }
-            } else if (exception instanceof CancellationException) {
-            } else if (exception instanceof ITerracottaProvider.ArchiveFileMissingException) {
-                LOG.warning("Cannot install terracotta from local package.", exception);
-                compareAndSet(preparing, new TerracottaState.Fatal(TerracottaState.Fatal.Type.INSTALL));
-            } else if (exception instanceof DownloadException) {
-                compareAndSet(preparing, new TerracottaState.Fatal(TerracottaState.Fatal.Type.NETWORK));
-            } else {
-                compareAndSet(preparing, new TerracottaState.Fatal(TerracottaState.Fatal.Type.INSTALL));
+        boolean dr = daemonRunning;
+        if (dr != active) {
+            daemonRunning = active;
+            if (active) {
+                LockSupport.unpark(DAEMON);
             }
-        }).start();
-
-        return compareAndSet(state, preparing) ? preparing : null;
+        }
     }
 
-    private static ITerracottaProvider getProvider() {
-        ITerracottaProvider provider = TerracottaMetadata.PROVIDER;
+    private static AbstractTerracottaProvider getProvider() {
+        AbstractTerracottaProvider provider = TerracottaMetadata.PROVIDER;
         if (provider == null) {
             throw new AssertionError("Terracotta Provider must NOT be null.");
         }
         return provider;
     }
 
-    public static TerracottaState recover(@Nullable Path file) {
+    public static boolean isInvalidBundle(Path file) {
+        return !FileUtils.getName(file).equalsIgnoreCase(TerracottaMetadata.PACKAGE_NAME);
+    }
+
+    @FXThread
+    public static TerracottaState.Preparing download() {
+        FXUtils.checkFxUserThread();
+
+        TerracottaState state = STATE_V.get();
+        if (!(state instanceof TerracottaState.Uninitialized || state instanceof TerracottaState.Fatal && ((TerracottaState.Fatal) state).isRecoverable())
+        ) {
+            return null;
+        }
+
+        TerracottaState.Preparing preparing = new TerracottaState.Preparing(new ReadOnlyDoubleWrapper(-1), true);
+
+        Task.composeAsync(() -> getProvider().download(preparing))
+                .thenComposeAsync(pkg -> {
+                    if (!preparing.requestInstallFence()) {
+                        return null;
+                    }
+
+                    return getProvider().install(pkg).thenRunAsync(() -> {
+                        TerracottaState.Launching launching = new TerracottaState.Launching();
+                        if (compareAndSet(preparing, launching)) {
+                            launch(launching, true);
+                        }
+                    });
+                }).whenComplete(exception -> {
+                    if (exception instanceof CancellationException) {
+                        // no-op
+                    } else if (exception instanceof DownloadException) {
+                        compareAndSet(preparing, new TerracottaState.Fatal(TerracottaState.Fatal.Type.NETWORK));
+                    } else {
+                        compareAndSet(preparing, new TerracottaState.Fatal(TerracottaState.Fatal.Type.INSTALL));
+                    }
+                }).start();
+
+        return compareAndSet(state, preparing) ? preparing : null;
+    }
+
+    @FXThread
+    public static TerracottaState.Preparing install(Path bundle) {
+        FXUtils.checkFxUserThread();
+        if (isInvalidBundle(bundle)) {
+            return null;
+        }
+
+        TerracottaState state = STATE_V.get();
+        TerracottaState.Preparing preparing;
+        if (state instanceof TerracottaState.Preparing previousPreparing && previousPreparing.requestInstallFence()) {
+            preparing = previousPreparing;
+        } else if (state instanceof TerracottaState.Uninitialized || state instanceof TerracottaState.Fatal && ((TerracottaState.Fatal) state).isRecoverable()) {
+            preparing = new TerracottaState.Preparing(new ReadOnlyDoubleWrapper(-1), false);
+        } else {
+            return null;
+        }
+
+        Task.composeAsync(() -> getProvider().install(bundle))
+                .thenRunAsync(() -> {
+                    TerracottaState.Launching launching = new TerracottaState.Launching();
+                    if (compareAndSet(preparing, launching)) {
+                        launch(launching, true);
+                    }
+                })
+                .whenComplete(exception -> {
+                    compareAndSet(preparing, new TerracottaState.Fatal(TerracottaState.Fatal.Type.INSTALL));
+                }).start();
+
+        return state != preparing && compareAndSet(state, preparing) ? preparing : null;
+    }
+
+    @FXThread
+    public static TerracottaState recover() {
         FXUtils.checkFxUserThread();
 
         TerracottaState state = STATE_V.get();
@@ -198,21 +234,23 @@ public final class TerracottaManager {
         }
 
         try {
+            // FIXME: A temporary limit has been employed in TerracottaBundle#checkExisting, making
+            //        hash check accept 50MB at most. Calling it on JavaFX should be safe.
             return switch (getProvider().status()) {
-                case NOT_EXIST, LEGACY_VERSION -> install(file);
+                case NOT_EXIST, LEGACY_VERSION -> download();
                 case READY -> {
                     TerracottaState.Launching launching = setState(new TerracottaState.Launching());
-                    launch(launching);
+                    launch(launching, false);
                     yield launching;
                 }
             };
-        } catch (NullPointerException | IOException e) {
+        } catch (RuntimeException | IOException e) {
             LOG.warning("Cannot determine Terracotta state.", e);
             return setState(new TerracottaState.Fatal(TerracottaState.Fatal.Type.UNKNOWN));
         }
     }
 
-    private static void launch(TerracottaState.Launching state) {
+    private static void launch(TerracottaState.Launching state, boolean removeLegacy) {
         Task.supplyAsync(() -> {
             Path path = Files.createTempDirectory(String.format("hmcl-terracotta-%d", ThreadLocalRandom.current().nextLong())).resolve("http").toAbsolutePath();
             ManagedProcess process = new ManagedProcess(new ProcessBuilder(getProvider().ofCommandLine(path)));
@@ -230,7 +268,7 @@ public final class TerracottaManager {
                     if (exitTime == -1) {
                         exitTime = System.currentTimeMillis();
                     } else if (System.currentTimeMillis() - exitTime >= 10000) {
-                        throw new IllegalStateException("Process has exited for 10s.");
+                        throw new IllegalStateException(String.format("Process has exited for 10s, code = %s", process.getExitCode()));
                     }
                 }
             }
@@ -238,6 +276,9 @@ public final class TerracottaManager {
             TerracottaState next;
             if (exception == null) {
                 next = new TerracottaState.Unknown(port);
+                if (removeLegacy) {
+                    TerracottaMetadata.removeLegacyVersionFiles();
+                }
             } else {
                 next = new TerracottaState.Fatal(TerracottaState.Fatal.Type.TERRACOTTA);
             }
@@ -272,24 +313,39 @@ public final class TerracottaManager {
     public static TerracottaState.HostScanning setScanning() {
         TerracottaState state = STATE_V.get();
         if (state instanceof TerracottaState.PortSpecific portSpecific) {
-            new GetTask(NetworkUtils.toURI(String.format(
-                    "http://127.0.0.1:%d/state/scanning?player=%s", portSpecific.port, getPlayerName()))
-            ).setSignificance(Task.TaskSignificance.MINOR).start();
+            Task.supplyAsync(Schedulers.io(), TerracottaNodeList::fetch)
+                    .thenComposeAsync(nodes -> {
+                        List<Pair<String, String>> query = new ArrayList<>(nodes.size() + 1);
+                        query.add(pair("player", getPlayerName()));
+                        for (URI node : nodes) {
+                            query.add(pair("public_nodes", node.toString()));
+                        }
+                        return new GetTask(NetworkUtils.withQuery(
+                                "http://127.0.0.1:%d/state/scanning".formatted(portSpecific.port), query
+                        )).setSignificance(Task.TaskSignificance.MINOR);
+                    }).start();
 
             return new TerracottaState.HostScanning(-1, -1, null);
         }
         return null;
     }
 
-    public static Task<TerracottaState.GuestStarting> setGuesting(String room) {
+    public static Task<TerracottaState.GuestConnecting> setGuesting(String room) {
         TerracottaState state = STATE_V.get();
         if (state instanceof TerracottaState.PortSpecific portSpecific) {
-            return new GetTask(NetworkUtils.toURI(String.format(
-                    "http://127.0.0.1:%d/state/guesting?room=%s&player=%s", portSpecific.port, room, getPlayerName()
-            )))
-                    .setSignificance(Task.TaskSignificance.MINOR)
-                    .thenSupplyAsync(() -> new TerracottaState.GuestStarting(-1, -1, null))
-                    .setSignificance(Task.TaskSignificance.MINOR);
+            return Task.supplyAsync(Schedulers.io(), TerracottaNodeList::fetch)
+                    .thenComposeAsync(nodes -> {
+                        ArrayList<Pair<String, String>> query = new ArrayList<>(nodes.size() + 2);
+                        query.add(pair("room", room));
+                        query.add(pair("player", getPlayerName()));
+                        for (URI node : nodes) {
+                            query.add(pair("public_nodes", node.toString()));
+                        }
+                        return new GetTask(NetworkUtils.withQuery("http://127.0.0.1:%d/state/guesting".formatted(portSpecific.port), query))
+                                .setSignificance(Task.TaskSignificance.MINOR)
+                                .thenSupplyAsync(() -> new TerracottaState.GuestConnecting(-1, -1, null))
+                                .setSignificance(Task.TaskSignificance.MINOR);
+                    });
         } else {
             return null;
         }
